# mujoco_wasm

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bun.lockb  index.html  package-lock.json  package.json  pixi.toml
dependencies/: CMakeLists.txt
dependencies/patches/: README.md  libccd.patch  mujoco.patch
examples/: main.js  mujocoUtils.js
examples/scenes/: index.json
examples/scenes/kuka/: iiwa14.xml  scene.xml
examples/scenes/panda/: panda.xml
examples/utils/: Reflector.js
notebooks/: dm_control.ipynb  robosuite.ipynb
python_app/: device_controller.py  device_orientation_component.py  localhost.cert  localhost.key  streamlit_app.py
python_app/src/: server.js
src/: main.genned.cc  main.template.cc  parse_mjxmacro.py
